# monthly-budget

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  PRD.md  README.md  Taskfile.yml  Tiltfile  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Taskfile.yml  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 587bc20d2058_add_categories_table.py  ab32c81d8481_add_expenses_and_monthly_goals_tables.py  c3f1d8a92e45_add_indexes_and_fix_nullable_columns.py  d2457cd3ba1a_create_users_and_refresh_token_.py  e508f2e08a06_initial_empty_migration.py  f3a9c2d1e4b7_add_family_management_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  logging.py  main.py
backend/app/models/: __init__.py  category.py  expense.py  family.py  family_member.py  invite.py  monthly_goal.py  refresh_token_blacklist.py  user.py
backend/app/routers/: auth.py  categories.py  dev_auth.py  expenses.py  users.py  (+3 more)
backend/tests/: conftest.py  test_auth.py  test_auth_integration.py  test_categories_api.py  test_categories_integration.py  test_categories_models.py  test_categories_service.py  test_expenses_api.py  test_expenses_integration.py  test_expenses_models.py  test_expenses_service.py  test_family_api.py  test_family_integration.py  test_family_models.py  test_family_service.py  test_grace_period.py  test_models.py  test_monthly_goals_api.py  test_monthly_goals_service.py  test_placeholder.py  test_rbac_dependencies.py  test_users.py
(+504 files in other folders)
